--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "laravel-echo": "^1.4.0",
         "pusher-js": "^4.3.1",
         "qrcode.vue": "^1.6.1",
+        "simplestorage.js": "^0.2.1",
         "validate.js": "^0.12.0",
         "vue-qr": "^1.5.2",
         "vue-router": "^3.0.1",
